backend-service1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-service1-deployment
  labels:
    app: backend-service1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-service1
  template:
    metadata:
      labels:
        app: backend-service1
    spec:
      containers:
        - name: backend-service1
          image: denglufei/k8s-service1:v1
          ports:
            - containerPort: 8080
