backend-service1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service1-service
  labels:
    app: backend-service1
spec:
  type: NodePort
  selector:
    app: backend-service1
  ports:
    - port: 8080
      nodePort: 30000
      targetPort: 8080
      protocol: TCP
      name: http
