backend-service2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service2-service
  labels:
    app: backend-service2
spec:
  type: NodePort
  selector:
    app: backend-service2
  ports:
    - port: 8080
      nodePort: 30001
      targetPort: 8080
      protocol: TCP
      name: http
