backend-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: backend-service1-service
                port:
                  number: 8080
          - path: /book
            pathType: Prefix
            backend:
              service:
                name: backend-service2-service
                port:
                  number: 8080
